--- a/style.css
+++ b/style.css
@@ -5,7 +5,46 @@
 }
 
 body {
-    background: #333;
+    background: grey;
     color: #f1f1f1;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    text-align: center;
+    font-size: 5vw;
+    margin: 50px 0;
+}
+
+form {
+    display: block;
+    margin: 0 auto;
+    width: 70%;
+    max-width: 1200px;
+    min-width: 400px;
+}
+
+form label {
+    display: block;
+    font-size: 25px;
+}
+form input{
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+    margin: 10px 0;
+}
+
+form button{
+    padding: 15px;
+    font-size: 20px;
+    color: blue;
+}
+
+.liste-todo {
+    list-style-type: none;
+    margin: 20px auto 0;
+    width: 70%;
+    max-width: 1200px;
+    min-width: 400px;
 }
