--- a/style.css
+++ b/style.css
@@ -5,15 +5,23 @@
 }
 
 body {
-    background: grey;
-    color: #f1f1f1;
+    /*background: linear-gradient(grey, white);*/
+    background :#ffffff;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
 
 h1{
+    
     text-align: center;
-    font-size: 5vw;
+    font-size: 3vw;
+    font-style: normal;
+    font-weight: bold;
     margin: 50px 0;
+    
 }
 
 form {
@@ -39,6 +47,7 @@ form button{
     padding: 15px;
     font-size: 20px;
     color: blue;
+    background: #FDFCFB;
 }
 
 .liste-todo {
@@ -47,4 +56,44 @@ form button{
     width: 70%;
     max-width: 1200px;
     min-width: 400px;
+}
+
+li {
+    font-size: 20px;
+    width: 100%;
+    background: #f1f1f1;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    color: #333;
+    margin: 5px 0;
+}
+
+li input {
+    width: 40px;
+    height: 40px;
+    margin-left: 15px;
+}
+
+li button{
+    margin-left: auto;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+button img{
+    width: 40px;
+    pointer-events: none;
+    justify-content: center;
+}
+
+li span{
+    font-size: 25px;
+    margin-left: 20px;
+}
+
+/* anim rayure */
+li.finDeTache span{
+    text-decoration: line-through;
 }
